package com.flashsale.userservice.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.flashsale.userservice.entity.Address;
import org.apache.ibatis.annotations.Mapper;

@Mapper
public interface AddressMapper extends BaseMapper<Address> {
}
