package com.flashsale.userservice.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.flashsale.userservice.entity.AuditLog;
import org.apache.ibatis.annotations.Mapper;

@Mapper
public interface AuditLogMapper extends BaseMapper<AuditLog> {
}
